<resources>
    <string name="app_name">square1</string>
    <string name="slogan">COME ON CHITKARIANS DIG INNNNNNN...........</string>
    <string name="name_login">NAME</string>
    <string name="password_login">Password</string>
    <string name="signin_button">SIGN IN </string>
    <string name="signup_button">SIGN UP</string>

    <string name="hint_name">Enter NAME</string>
    <string name="pass_hint">Enter Password</string>
    <string name="title_activity_sign_up">SignUp</string>
</resources>

