<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.square1.ubuntu.square1.SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText"
            android:layout_marginEnd="142dp"
            android:layout_marginRight="142dp"
            android:layout_marginTop="62dp"
            android:text="@string/name_login"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="40sp" />
        <EditText
            android:id="@+id/edtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/widget_edittext_dark"
            android:hint="@string/hint_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_toEndOf="@+id/editText"
            android:layout_toRightOf="@+id/editText"
            android:text="@string/password_login"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="40sp" />
        <EditText
            android:id="@+id/edtPassward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/widget_edittext_dark"
            android:hint="@string/pass_hint"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="40sp"/>

<Button
    android:id="@+id/btnSignIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/signin_button"/>
    </LinearLayout>



</RelativeLayout>
