<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.square1.ubuntu.square1.MainActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_gravity='center'
    android:layout_marginStart="85dp"
    android:layout_marginTop="200dp"

    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/linearLayout">
    <ImageView
        android:src='@drawable/logo'
        android:layout_width="200dp"
        android:layout_height="200dp" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/txtSlogan"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:text="@string/slogan"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimary"
        />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="bottom"
    >

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/btnSignup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_dark"
        android:text="@string/signin_button"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/signup_button"
        android:textColor="@android:color/holo_red_dark"
        android:textAllCaps="true"
        android:textSize="30sp"/>
</LinearLayout>













</LinearLayout>
</RelativeLayout>
